# ArchVisier

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dokumentacja_Techniczna.md  Dokumentacja_Uzytkownika.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  build_exe.py  cli.py  fetch_tesseract.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  license_audit.yml
1_Narzedzia_Treningowe/: README.md  __init__.py  konwertuj_pdf_do_txt.py  przygotuj_dane_z_rozpisek.py  trenuj_model.py
2_Aplikacja_Glowna/: __init__.py  app.py  app_session_manager.py  config.json  config.py  context_analyzer.py  document_context_memory.json  logging_config.py  ml_helper.py  model_downloader.py  prompts.json  subprocess_runner.py  training_engine.py  training_ocr.cpp  training_ocr.lib  training_worker.py
2_Aplikacja_Glowna/SmartExtractor/: __init__.py  smart_extractor.py
2_Aplikacja_Glowna/gui/: __init__.py  constants.py  model_manager.py  pdf_processor_app.py  processing_worker.py  qt_safe.py  qt_vars.py  session_manager_ui.py  style.py  training_window.py
2_Aplikacja_Glowna/native/: build_fast_similarity.sh  build_levenshtein.sh  fast_similarity.c  fast_similarity.zig  levenshtein.c
2_Aplikacja_Glowna/processing/: __init__.py  ocr.py
2_Aplikacja_Glowna/sessions/: SKIBIDI.xlsx  archiwizator_sesja_20250905_135943.arch
gui_native/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PdfPreviewWidget.cpp  PdfPreviewWidget.h  PythonClient.cpp  PythonClient.h  benchmark_ui.py  requirements.txt  server.py
gui_tauri/: NOTICE.md  index.html  package.json  tsconfig.json  vite.config.ts
gui_tauri/src/: App.tsx  PdfPreview.tsx
gui_tauri/src-tauri/: Cargo.toml  tauri.conf.json
native_c/: CMakeLists.txt  token_similarity.c  token_similarity.h
python/: token_similarity.py  zig_token_similarity.py
python/PIL/: __init__.py
python/numpy/: __init__.py
scripts/: audit_licenses.sh  run_gui_native.sh  run_gui_tauri.sh  run_tests.sh
tests/: conftest.py  test_build_exe.py  test_config_validation.py  test_context_analyzer.py  test_export_to_xlsx.py  test_fast_similarity.py  test_generate_new_filename.py  test_handle_file_copy.py  test_levenshtein_c.py  test_ocr.py  test_pdf_processor_app.py  test_processing_worker_regex.py  test_smart_extractor.py  test_token_similarity.py
(+23 files in other folders)
